# elegram

./: .travis.yml  CMakeLists.txt  README.md
client/: .travis.yml  CMakeLists.txt  elegram_client.pro  qml.qrc
client/protobuf/: messages.pb.cc
client/qml/: AddContactWindow.qml  BackButton.qml  ChatsWindow.qml  ContactsWindow.qml  LoginWindow.qml  MessagesWindow.qml  ProfileWindow.qml  RegisterWindow.qml  SettingsWindow.qml  SimplePopup.qml  main.qml
client/src/: backend.cpp  backend.h  backend_facade.cpp  backend_facade.h  main.cpp
client/src/jobs/: ijob.h  jobs.cpp  jobs.h  jobsutils.cpp  jobsutils.h
client/src/message_processing/: messagefactory.cpp  messagefactory.h  messageparser.cpp  messageparser.h
client/src/model/: chatslist.cpp  chatslist.h  chatsmodel.cpp  chatsmodel.h  contactslist.cpp  contactslist.h  contactsmodel.cpp  contactsmodel.h  messageslist.cpp  messageslist.h  messagesmodel.cpp  messagesmodel.h
client/src/network/: network_session.cpp  network_session.h
config_travis/: cosmic.list  cosmic_packages.pref
docs/: client.md  server.md
protocol/: messages.proto
server/: .travis.yml  CMakeLists.txt
server/src/: main.cpp
server/src/exceptions/: exceptions.cpp  exceptions.h
server/src/hashing/: hashing.cpp  hashing.h
server/src/jobs/: jobs.cpp  jobs.h
server/src/proto/: messages.pb.cc  messages.pb.h
server/src/server/: server.cpp  server.h  session.cpp  session.h
server/src/storage/: abstract_storage.h  db_storage.cpp  db_storage.h  postgresql_storage.cpp  postgresql_storage.h
server/src/storage/pimpl/: lazy_connection_decl.h  lazy_connection_wrapper.cpp  lazy_connection_wrapper.h
server/tests/: docker_start_postgres.sh  gen_data.sh  gen_schema.sql  gen_test_users.py  init.sh  messages_pb2.py  requirements.txt  test_send_packets.py
